--- a/CV_NguyenDinhTam.html
+++ b/CV_NguyenDinhTam.html
@@ -25,8 +25,8 @@
                     </a>
                 </div>
                 <div class="header__text-big">
-                    <div class="header__text-big__top">MATTY</div>
-                    <div class="header__text-big__bottom">JAMSON</div>
+                    <div class="header__text-big__top">Nguyen</div>
+                    <div class="header__text-big__bottom">Dinh Tam</div>
                 </div>
                 <div class="header__road__text">
                     <div class="header__road__text__road">
@@ -44,16 +44,10 @@
                     </div>
                     <div class="content__about-me__road"></div>
                     <div class="content__about-me__content content__about-me__content--top">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat nec tortor a eleifend.
-                        Proin nec ligula vel sem luctus porttitor.
-                        Cras at interdum libero. Donec nec mauris velit.
+                        Xin chào! Tôi tên là Nguyễn Đình Tam đang là sinh viên năm 2 của đại học Thuỷ Lợi. Hiện đang sinh sống ,học tập và làm việc tại Hà Nội 
                     </div>
                     <div class="content__about-me__content content__about-me__content--bottom">
-                        Vestibulum eu eros tortor. Aliquam cursus nunc mauris, nec congue tortor pretium et.
-                        Pellentesque feugiat justo in metus laoreet consectetur.
-                        Mauris at tempor ipsum, sit amet etae posuere.
-                        Nunc auctor sollicitudin sem ut molestie. Pellentesque ligula sapien, ullamcorper et tempor id,
-                        congue ac sapien.
+                        Mong muốn của tôi là sẽ học tập thật tốt và có thật nhiều các kỹ năng để mai sau ra trường có 1 công việc ổn định.
                     </div>
                 </div>
                 <div class="content__skills">
@@ -82,7 +76,7 @@
                             <div class="content__personal_skills__content__persent">
                                 <div class="content__personal_skills__content__number-persent--team-word"></div>
                                 <div class="content__personal_skills__content__persent__mess persent__eighty">
-                                    80%
+                                    75%
                                     <div class="content__personal_skills__content__persent__mess__trangle"></div>
                                 </div>
                             </div>
@@ -92,7 +86,7 @@
                             <div class="content__personal_skills__content__persent">
                                 <div class="content__personal_skills__content__number-persent--leadership"></div>
                                 <div class="content__personal_skills__content__persent__mess persent__ninety-five">
-                                    95%
+                                    80%
                                     <div class="content__personal_skills__content__persent__mess__trangle"></div>
                                 </div>
                             </div>
