--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <div class="heading">
             <h1 class="wow flipInX">Tạo CV cho riêng bạn</h1>
             <br>
-            <a href="./CV_Example/CV1/index.html"><button class="btn btn-outline-success my-2 my-sm-0 wow bounce" type="submit">CV Trần Công Hải</button></a><br><br>
-            <a href="./CV_Example_2/CV1/index.html"><button class="btn btn-outline-success my-2 my-sm-0 wow bounce" type="submit">CV Ví dụ 2</button></a><br><br>
-            <a href="./CV_Example_3/CV1/index.html"><button class="btn btn-outline-success my-2 my-sm-0 wow bounce" type="submit">CV Ví dụ 3</button></a><br><br>
+            <a href="CV-Hai.html"><button class="btn btn-outline-success my-2 my-sm-0 wow bounce" type="submit">CV Trần Công Hải</button></a><br><br>
+            <a href="CV-Linh.html"><button class="btn btn-outline-success my-2 my-sm-0 wow bounce" type="submit">CV Lê Thuỳ Linh</button></a><br><br>
+            <a href="CV-Tam.html"><button class="btn btn-outline-success my-2 my-sm-0 wow bounce" type="submit">CV Nguyễn Đình Tam</button></a><br><br>
         </div>
     </section>
 
