--- a/CV-Hai.html
+++ b/CV-Hai.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/hai.css">
 </head>
 
 <body>
@@ -24,8 +24,8 @@
                     </a>
                 </div>
                 <div class="header__text-big">
-                    <div class="header__text-big__top">MATTY</div>
-                    <div class="header__text-big__bottom">JAMSON</div>
+                    <div class="header__text-big__top">TRẦN</div>
+                    <div class="header__text-big__bottom">CÔNG HẢI</div>
                 </div>
                 <div class="header__road__text">
                     <div class="header__road__text__road">
@@ -43,11 +43,11 @@
                     </div>
                     <div class="content__about-me__road"></div>
                     <div class="content__about-me__content content__about-me__content--top">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis volutpat nec tortor a eleifend. Proin nec ligula vel sem luctus porttitor. Cras at interdum libero. Donec nec mauris velit.
+                        Here's a bit of my current info
                     </div>
                     <div class="content__about-me__content content__about-me__content--bottom">
-                        Vestibulum eu eros tortor. Aliquam cursus nunc mauris, nec congue tortor pretium et. Pellentesque feugiat justo in metus laoreet consectetur. Mauris at tempor ipsum, sit amet etae posuere. Nunc auctor sollicitudin sem ut molestie. Pellentesque ligula
-                        sapien, ullamcorper et tempor id, congue ac sapien.
+                        My name is Tran Cong Hai, born on October 21, 2002, currently a student at Thuy Loi University, majoring in Information Technology, this is a big assignment - my CV.
+                        I am a member of group 3, teacher Kieu Tuan Dung is my teacher in this subject
                     </div>
                 </div>
                 <div class="content__skills">
